<resources>
    <string name="app_name">TasKitty</string>
    <!-- TODO: Remove or change this placeholder text -->

    <!--General app text-->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="did_you_know">Sabías qué...</string>
    <string name="more_info">Saber más</string>
    <string name="app_customize">Personalizacion</string>
    <string name="app_colors">Colorcitos</string>
    <string name="app_save">Guardar</string>
    <string name="app_discard">Descartar</string>
    <string name="app_delete">Eliminar</string>
    <string name="app_accept">Aceptar</string>
    <string name="calendar">Calendario</string>
    <string name="events">Eventos</string>
    <string name="themes">Temas(Prox.)</string>
    <string name="aboutus">Acerca de</string>
    <string name="text_copyright">Ⓒ2022 TasKitty.\nTodos los derechos reservados</string>

    <!--Texts for events-->
    <string name="event">Eventos</string>
    <string name="event_details">Detalles del evento</string>
    <string name="event_edit_mode">Gestionar un evento</string>
    <string name="event_create">Crear un nuevo evento</string>
    <string name="event_title">Título del evento</string>
    <string name="event_desc">Descripción del evento</string>
    <string name="event_progr">Programación del evento</string>
    <string name="event_start">Inicio del evento</string>
    <string name="event_end">Final del evento</string>
    <string name="completed_events">Eventos completados</string>
    <string name="coming_events">Próximos eventos</string>
    <string name="programfor_events">Programado para: </string>
    <string name="non_elements">No hay elementos por mostrar</string>


    <!--Texts for notes-->
    <string name="notes">Anotaciones</string>
    <string name="notes_create">Crear una nueva anotación</string>
    <string name="notes_title">Título de la anotación</string>
    <string name="notes_empty">Anotación sin título</string>
    <string name="notes_desc">Descripción de la anotación</string>
    <string name="notes_modified">Modificado: </string>
    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</string>

    <!--Texts for charity-->
    <string name="charity">Caridad</string>
    <string name="charity_org">Organizaciones benéficas</string>
    <string name="charity_donate">¿Por qué donar?</string>
    <string name="know_more">Saber más</string>
    <string name="read_more">Leer más</string>

    <!--placeholders-->
    <string name="charity_desc">Descripción para la caridad</string>

    <!--Texts for nav-->
    <string name="open">Open</string>
    <string name="close">Close</string>

</resources>
