<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@drawable/charity_main_element">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/tvOrg"
                android:layout_width="84dp"
                android:layout_height="84dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_margin="20dp"
                />

            <TextView
                android:id="@+id/tvOrgName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/charity"
                app:layout_constraintHorizontal_bias="0.050"
                app:layout_constraintLeft_toRightOf="@id/tvOrg"

                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintHorizontal_bias="0.050"
                app:layout_constraintTop_toBottomOf="@id/tvOrgName"
                app:layout_constraintLeft_toRightOf="@id/tvOrg"
                app:layout_constraintRight_toRightOf="parent"
                android:text="@string/charity_org"
                />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="10dp"
            android:background="@drawable/charity_main_element">

            <TextView
                android:id="@+id/tvWhyDonate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                android:text="@string/charity_donate"
                android:padding="5dp"/>
            <TextView
                app:layout_constraintTop_toBottomOf="@id/tvWhyDonate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/charity_org"
                android:padding="10dp"/>
        </androidx.constraintlayout.widget.ConstraintLayout>


    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>