<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginVertical="2dp">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageButton
            android:id="@+id/btnEnterEvent"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/event_element_home" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:rotation="360">
                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="5dp">
                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/appCompatImageView"
                        android:layout_width="27dp"
                        android:layout_height="27dp"
                        android:layout_marginLeft="6dp"
                        android:padding="5dp"
                        android:src="@drawable/circular_element"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />
                    <TextView
                        android:id="@+id/tvEventTitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/kadwa_bold"
                        android:text="@string/event_title"
                        android:textColor="@color/black" />
                </TableRow>
            </TableLayout>

            <TextView
                android:id="@+id/tvNoteDesc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@drawable/event_mid_element"
                android:fontFamily="@font/kadwa_regular"
                android:padding="5dp"
                android:paddingVertical="5dp"
                android:text="@string/notes_desc"
                android:textColor="@color/black"
                android:textSize="12dp" />

            <TextView
                android:id="@+id/tvNoteTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="7dp"
                android:background="@drawable/event_home_bottom"
                android:fontFamily="@font/kadwa_bold"
                android:padding="5dp"
                android:paddingVertical="5dp"
                android:text="@string/programfor_events"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="12dp" />
        </LinearLayout>
    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>