<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeFragment"
    android:background="@color/back_yellow">

    <TextView
        android:id="@+id/topTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/top_new_event"
        android:fontFamily="@font/kadwa_bold"
        android:paddingVertical="7dp"
        android:text="@string/notes_create"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="18dp"
        app:layout_constraintTop_toTopOf="parent"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
        app:layout_constraintTop_toBottomOf="@id/topTitle"
        app:layout_constraintVertical_bias="0.0"
        tools:layout_editor_absoluteX="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@color/red_schema"
                android:paddingHorizontal="10dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tfTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/transparent"
                    android:fontFamily="@font/kadwa_bold"
                    android:hint="@string/notes_title"
                    android:maxLines="@integer/material_motion_duration_short_1"
                    android:padding="6dp"
                    android:textColor="@color/white"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/ivEventFix"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginEnd="5dp"
                    android:src="@drawable/ic_star"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etTitleda"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_marginTop="12dp"
                android:background="@color/transparent"
                android:fontFamily="@font/kadwa_bold"
                android:gravity="top"
                android:hint="@string/lorem"
                android:padding="10dp"
                android:textColor="@color/font_yellow_black"
                android:textSize="12dp" />


            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                app:layout_constraintBottom_toTopOf="@id/contColors">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <Button
                        android:id="@+id/btnDiscard"
                        android:layout_width="130dp"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="5dp"
                        android:background="@drawable/button_discard"
                        android:fontFamily="@font/kadwa_bold"
                        android:paddingHorizontal="20dp"
                        android:text="@string/app_discard"
                        android:textAlignment="center"
                        android:textAllCaps="false"
                        android:textColor="@color/white"
                        android:textSize="18dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <Button
                        android:id="@+id/btnAccept"
                        android:layout_width="130dp"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="5dp"
                        android:background="@drawable/button_accept"
                        android:fontFamily="@font/kadwa_bold"
                        android:paddingHorizontal="20dp"
                        android:text="@string/app_accept"
                        android:textAlignment="center"
                        android:textAllCaps="false"
                        android:textColor="@color/white"
                        android:textSize="18dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@id/btnDiscard"
                        app:layout_constraintTop_toTopOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/contColors"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/content_yellow"
                app:layout_constraintBottom_toTopOf="@id/tvLastEdit"
                >

                <RadioGroup
                    android:id="@+id/rgGroup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:orientation="horizontal"
                    android:layout_marginVertical="8dp"
                    >

                    <RadioButton
                        android:id="@+id/radioRed"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="3dp"
                        android:background="@drawable/circular_element_red"
                        android:text=""
                        tools:ignore="TouchTargetSizeCheck,TouchTargetSizeCheck" />

                    <RadioButton
                        android:id="@+id/radioGreen"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="3dp"
                        android:background="@drawable/circular_element_green"
                        android:text=""
                        tools:ignore="TouchTargetSizeCheck,TouchTargetSizeCheck" />

                    <RadioButton
                        android:id="@+id/radioBlue"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="3dp"
                        android:background="@drawable/circular_element_blue"
                        android:text=""
                        tools:ignore="TouchTargetSizeCheck,TouchTargetSizeCheck" />

                    <RadioButton
                        android:id="@+id/radioYellow"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="3dp"
                        android:background="@drawable/circular_element_yellow"
                        android:text=""
                        tools:ignore="TouchTargetSizeCheck,TouchTargetSizeCheck" />

                    <RadioButton
                        android:id="@+id/radioPurple"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="3dp"
                        android:background="@drawable/circular_element_purple"
                        android:text=""
                        tools:ignore="TouchTargetSizeCheck,TouchTargetSizeCheck" />

                    <RadioButton
                        android:id="@+id/radioCian"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="3dp"
                        android:background="@drawable/circular_element_cian"
                        android:text=""
                        tools:ignore="TouchTargetSizeCheck,TouchTargetSizeCheck" />

                </RadioGroup>
            </androidx.constraintlayout.widget.ConstraintLayout>
            <TextView
                android:id="@+id/tvLastEdit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/dark_yellow"
                android:paddingVertical="2dp"
                android:text="@string/notes"
                android:fontFamily="@font/kadwa_bold"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="18dp"
                app:layout_constraintBottom_toBottomOf="parent"
                />

        </LinearLayout>
    </ScrollView>



</androidx.constraintlayout.widget.ConstraintLayout>